# Drone

./: .gitignore  ISSUES.md  README.md
.assets/: DroneWiring.drawio
.docs/: hardware_info.md  software_info.md
assets/: DroneWiring.drawio
docs/: hardware_info.md  software_info.md
include/control/: teleop.h
include/util/: state.hpp
log/: latest_build
src/control/: CMakeLists.txt  package.xml  teleop.c
src/control/include/: abstract_tele.hpp  auto_controller.hpp  auto_rise.hpp  px4_controller.hpp  tele_basic.hpp  tele_controller.hpp
src/control/include/opmodes/: abstract_auto.hpp  auto_bezier.hpp  auto_patrol  auto_patrol.hpp  auto_rise.hpp  tele_basic.hpp
src/control/launch/: control.launch.py
src/control/src/: auto_rise.cpp  control_node.cpp  drive_node.cpp  px4_controller.cpp  tele_basic.cpp
src/input/: CMakeLists.txt  package.xml
src/input/launch/: input.launch.py
src/input/src/: gamepad_bridge.cpp
src/localization/: CMakeLists.txt  package.xml
src/localization/launch/: localization.launch.py
src/localization/launch/config/: ekf.yaml  navsat_config.yaml
src/localization/src/: camera_listener.cpp  gps_filter.cpp  imu_filter.cpp
src/nodes/: control_node.cpp
src/pathing/: CMakeLists.txt  package.xml
src/pathing/include/: bezier.hpp  bezier_path.hpp  pose.hpp
src/sensor/: CMakeLists.txt  package.xml
src/sensor/launch/: sensor.launch.py
src/sensor/src/: camera_bridge.cpp  gps_bridge.cpp  gps_listener.cpp  imu_bridge.cpp  imu_listener.cpp  sensor_node.cpp
src/system_launch/: CMakeLists.txt  package.xml
src/system_launch/launch/: main.launch.py
src/test/: CMakeLists.txt  package.xml
src/test/launch/: gamepad.launch.py  pubsub.launch.py  rise.launch.py  sensor.launch.py  test.launch.py
src/test/sandbox/: OV9715  OV9715.cpp  calibrate  calibrate.bak  calibrate.cpp
src/test/src/: test_imu.cpp  test_joy.cpp  test_odo.cpp  test_publisher.cpp  test_rise.cpp  test_subscriber.cpp
src/vision/: CMakeLists.txt  package.xml
src/vision/launch/: vision.launch.py
src/vision/src/: camera_listener.cpp  red_detector_node.cpp
