<?xml version="1.0"?>
<package format="3">
  <name>input</name>
  <version>0.1.0</version>
  <description>Input handling</description>

  <maintainer email="austin.jia@utexas.edu">Austin Jia</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build + Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>px4_ros_com</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
