<?xml version="1.0"?>
<package format="3">
  <name>system_launch</name>
  <version>0.1.0</version>
  <description>Main launch file</description>

  <maintainer email="austin.jia@utexas.edu">Austin Jia</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build + Runtime dependencies -->
  <exec_depend>control</exec_depend>
  <exec_depend>sensor</exec_depend>
  <exec_depend>test</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
