<?xml version="1.0"?>
<package format="3">
  <name>test</name>
  <version>0.1.0</version>
  <description>Offboard control</description>

  <maintainer email="austin.jia@utexas.edu">Austin Jia</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build + Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
